name:          adjunctions
category:      Data Structures, Adjunctions
version:       3.2
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/adjunctions/
bug-reports:   http://github.com/ekmett/adjunctions/issues
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Adjunctions
description:   Adjunctions
build-type:    Simple
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/adjunctions.git

library
  hs-source-dirs: src

  other-extensions:
    CPP
    FunctionalDependencies
    FlexibleContexts
    MultiParamTypeClasses
    Rank2Types
    UndecidableInstances

  build-depends:
    array                  >= 0.3.0.2 && < 0.5,
    base                   >= 4       && < 5,
    transformers           >= 0.2     && < 0.4,
    mtl                    >= 2.0.1   && < 2.2,
    containers             >= 0.3     && < 0.6,
    comonad                >= 3       && < 4,
    contravariant          >= 0.2.0.1 && < 1,
    distributive           >= 0.2.2   && < 1,
    semigroupoids          >= 3       && < 4,
    void                   >= 0.5.5.1 && < 1,
    keys                   >= 3       && < 4,
    comonad-transformers   >= 3       && < 4,
    representable-functors >= 3.1     && < 4,
    free                   >= 3       && < 4

  exposed-modules:
    Data.Functor.Adjunction
    Data.Functor.Contravariant.Adjunction
    Control.Comonad.Trans.Adjoint
    Control.Monad.Trans.Adjoint
    Control.Monad.Trans.Conts
    Control.Monad.Trans.Contravariant.Adjoint

  ghc-options: -Wall
